noinst_LTLIBRARIES = libenergy_equation.la

libenergy_equation_la_CPPFLAGS = -Wall -Werror \
                                 -I$(srcdir)/../include \
                                 -I$(top_srcdir)/include \
                                 -I$(top_builddir)/include \
                                 $(cnstvm_include) \
                                 $(ttl_include) \
                                 $(mkl_include) 

libenergy_equation_la_SOURCES  = energy_equation.cc
