noinst_LIBRARIES = librenumbering.a
librenumbering_a_SOURCES = \
		  	   check_num_procs.c \
			   remove_diagonal.c \
			   renumber.c \
			   switch_domains.c \
			   renumber_utils.c \
			   domain_container.c \
			   comm_profiler.c

AM_CPPFLAGS = -I$(top_srcdir)/$(subdir)/../include $(parmetis_include)
DEFAULT_INCLUDES = 
